--- a/trunk/virtual_lab/src/main/webapp/templates/person.html
+++ b/trunk/virtual_lab/src/main/webapp/templates/person.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="span6 record" id="column-second">
-        <h3>[icon] Paul Freeman</h3>
+        <h3><img src="img/icon_person.gif" /> Paul Freeman</h3>
             
             <ul>
               <li class="category"><a href="#">Type:</a></li> 
@@ -111,7 +111,7 @@
             </ul>
       </div>
 
-      <div class="span3 record" id="column-third">
+      <div class="span3" id="column-third">
         <h4>This Might Interest You</h4>
 
             <p>A list of related links sorted by category related to the main content.</p>
