--- a/virtual_lab/src/main/webapp/templates/group.html
+++ b/virtual_lab/src/main/webapp/templates/group.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="span6 record" id="column-second">
-        <h3>[icon] CSIRO Division of Radiophysics</h3>
+        <h3><img src="img/icon_group.gif" /> CSIRO Division of Radiophysics</h3>
             
             <ul>
               <li class="category"><a href="#">Formed:</a></li> 
