--- a/virtual_lab/src/main/webapp/templates/index.html
+++ b/virtual_lab/src/main/webapp/templates/index.html
@@ -152,7 +152,7 @@
               <li><a href="help.html">Tutorials/Help</a></li>
               <li><a href="contact.html">Contact</a></li>
               <li><a href="person.html">Person Record</a></li>
-              <li><a href="group.html">Group Record</a></li>
+              <li><a href="group.html">Group Record</a></li>  
             </ul>
           </div>
         </div>
@@ -163,83 +163,45 @@
 
       <div class="row-fluid">
         <div class="search-container">
-        <h2>Search. Analyse. Share.</h2>
-        <form id="searchbox" action="">
-                <input id="search" type="text" placeholder="Type your search here to begin!">
+        <h2>Unlocking and uniting Australia's cultural datasets</h2>
+        <form class="searchbox" action="">
+
+    <div class="input-prepend">
+    <div class="btn-group">
+    <button class="btn dropdown-toggle" data-toggle="dropdown">
+   All fields
+    <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+    <li>People</li>
+    <li>Places</li>
+    <li>Objects</li>
+    <li>Events</li>
+    </ul>
+    </div>
+    <input id="search" type="text" placeholder="Type your search here to begin!">
+    </div>
+
+                
                 <input id="submit" type="submit" value="Search">
             </form>
+
             <span style="float:left;"><form><input type="checkbox" name="records" value="yes">Include similar/related records</form></span>
-            <span style="float:right;">Stuck? Try the <a href="#">Advanced Search</a>!</span>
+            <span style="float:right; margin-bottom: 20px;">Stuck? Try the <a href="advanced-search.html">Advanced Search</a>!</span>
+
+            <h4>Find and get more than 2 million records on the people, places, objects and events that make up Australia's rich cultural heritage.</h4>
+
+
             <div class="entry first"><a href="#"><h4>People</h4><p>Praesent at ante purus, sed tempus metus. Vivamus pellentesque tristique.</p></a></div>
-            <div class="entry"><a href="#"><h4>Places</h4><p>Ac adipiscing justo lobortis eu. Phasellus pellentesque, diam quis consectetur ornare.</p></a></div>
+            <div class="entry"><a href="#"><h4>Places</h4><p>Ac adipiscing eu. Phasellus pellentesque, diam quis consectetur.</p></a></div>
+            <div class="entry"><a href="#"><h4>Objects</h4><p>Phasellus pellentesque, diam quis consectetur ornare.</p></a></div>
             <div class="entry last"><a href="#"><h4>Events</h4><p>Cras accumsan, nulla vel facilisis auctor, enim felis posuere dolor, eget euismod.</p></a></div>
             </div>
       </div>
 
-    <div class="row-fluid">
-      <div class="span4">
-      <h3>What's inside</h3>
-      <ul>
-        <li>more than 2M records from 28 datasets</li>
-        <li>xxx records on significant events</li>
-        <li>xxx records on people</li>
-        <li>xxx records on...</li>
-      </ul>
-      </div>
+    </div> <!-- main content end -->     
 
-      <div class="span4">
-      <h3>Popular Searches</h3>
-      <ul>
-        <li>Nam nisi felis</li>
-        <li>Porta id volutpat ut</li>
-        <li>Tristique a sem</li>
-        <li>Integer cursus ligula non sem gravida varius</li>
-        <li>Nulla fringilla metus id tellus sollicitudin fermentum</li>      
-      </ul>
-      </div>
-
-      <div class="span4">
-      <h3>Happy Birthday!</h3>
-      <p>Tag cloud.</p>
-      </div>
-    </div>
-
-<!--  
-    <div class="row-fluid">
-      <div class="span4">
-        <h3>Are you a researcher?</h3>
-      <p>Morbi accumsan scelerisque leo, a mattis quam viverra sit amet. Fusce ullamcorper, lorem eu vehicula molestie, mauris arcu cursus sem, nec egestas ipsum sapien vitae nisi. Phasellus aliquam hendrerit convallis. Praesent eleifend varius adipiscing. Maecenas accumsan laoreet facilisis.</p>
-
-      <p>Sed tellus sapien, ultricies dapibus sodales a, dictum in tortor. </p>
-    </div>
-
-<!--  
-      <div class="span4">
-         <h3>Popular Records</h3>
-      <ul>
-        <li>Etiam purus leo</li>
-        <li>Tincidunt vel scelerisque vitae</li>
-        <li>Vehicula ut tellus</li>
-        <li>Integer ultricies mollis nulla</li>
-        <li>Sit amet feugiat felis pulvinar eget</li>        
-      </ul>
-    </div>
--->
-
-<!--  
-<div class="span4">
-      <h3>Movies Released This Month</h3>
-      <p>Tag cloud.</p>
-      </div>
-
-    </div> 
--->
-
-    <!-- main content end --> 
-        
-	<!-- footer start -->
-
-    <footer> 
+    <footer> <!-- footer start -->
       <div class="row-fluid">
       <div class="footer-column span4">
         <p>&copy; 2012 HuNI HuNI is proud to be working in partnership with the NeCTAR (National eResearch Collaboration Tools and Resources) project to create an online research community around Australia's cultural datasets. This project will benefit Australian researchers by providing them with access to a wealth of combined resources and the tools with which to analyse and share them, thus enhancing their research outcomes. </p>
@@ -260,7 +222,8 @@
     </div>
     </footer> <!-- footer end -->
     </div>
- 
+
+
 
     <!-- Le javascript
     ================================================== -->
