--- a/trunk/virtual_lab/src/main/webapp/partials/search/familyname.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/search/familyname.html
@@ -28,16 +28,31 @@
 				<span class="help-inline"><i class="icon-info-sign"></i>Help...</span>
 			</div>
 		</div>
+		<div class="control-group">
+			<input type="number" ng-model="resultsPerPage" placeholder=5 style="border-radius: 0; width: 35px"/>
+		</div>
 	</form>
 </div>
 </div>
 
-<div class="row-fluid">      
-	<div>
-		<ul class="nav nav-list">
-		    <li ng-repeat="person in response.results.bindings" class="nav-header" >{{person.firstName.value}} ({{person.lastName.value}})</li>
-		</ul>
-	</div>
+<div class="row-fluid">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Family name</th>
+				<th>Given name</th>
+				<th>Birth date</th>
+				<th>Occupation</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="person in response.results.bindings">
+				<th>{{person.lastName.value}}</th>
+				<td>{{person.firstName.value}}</td>
+				<td>{{person.birthDate.value}}</td>
+				<td>{{person.typeName.value}}</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 
- 
