--- a/trunk/virtual_lab/src/main/webapp/templates/advanced-search.html
+++ b/trunk/virtual_lab/src/main/webapp/templates/advanced-search.html
@@ -69,43 +69,107 @@
       </div>
 
     <div class="row-fluid">
-      
+      <p>The advanced search allows you to be more indepth and precise with your search queries. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra metus a purus vulputate rhoncus. Vestibulum risus nunc, auctor ut tempor quis, consectetur at purus. Phasellus viverra scelerisque sollicitudin. In sodales orci imperdiet quam placerat id bibendum orci molestie. Sed ut libero orci, sed mattis risus. Pellentesque non turpis a augue ullamcorper placerat vel vel nibh. Ut iaculis interdum malesuada.</p>
       <div>
       
-<form id="advanced-search" class="form-horizontal">
+<form id="advanced-search" class="">
 
     <div class="control-group">
-    <label class="control-label" for="advancedSearchQuery">Your search query</label>
+    <label class="control-label" for="advancedSearchQuery">Keywords</label>
     <div class="controls">
-    <input type="text" class="input-xlarge" id="advancedSearchQuery" placeholder="Your search query">
-    <button type="submit" class="btn">Search</button>
-    <span class="help-inline"><i class="icon-info-sign"></i> Your search query.</span>
-    </div>
-    </div>
-
-    <div class="control-group">
-    <label class="control-label" for="inputLastName">Option 1</label>
-    <div class="controls">
-    <input type="text" placeholder="Option 1">
-    <span class="help-inline"><i class="icon-info-sign"></i> Description about what this option does.</span>
+    <input type="text" class="input-xlarge" id="advancedSearchQuery" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Keywords related to your search.</span>
+    
+    <div class="search-buttons">
+    <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Keyword x</button> <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Keyword x</button> <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Keyword x</button> <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Keyword x</button>
+</div>
     </div>
     </div>
 
     <div class="control-group">
-    <label class="control-label" for="inputLastName">Option 2</label>
+    <label class="control-label" for="inputLastName">People</label>
     <div class="controls">
-    <input type="text" placeholder="Option 2">
-    <span class="help-inline"><i class="icon-info-sign"></i> A description for this option.</span>
+    <input type="text" class="input-xlarge" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Narrow your search parameters by focusing on People.</span>
+    <div class="search-buttons">
+    <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">John x</button>
+    <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Smith x</button>
+  </div>
     </div>
     </div>
 
-
-<div class="control-group">
-    <label class="control-label" for="advancedSearchQuery">Your search query</label>
+    <div class="control-group">
+    <label class="control-label" for="inputLastName">Places</label>
     <div class="controls">
-    <input type="text" class="input-xlarge" id="advancedSearchQuery" placeholder="Your search query">
-    <button type="submit" class="btn">Search</button>
+    <input type="text" class="input-xlarge" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Help text for Places.</span>
+    <div class="search-buttons">
+    <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Sydney x</button>
+  </div>
     </div>
+    </div>
+
+  <div class="control-group">
+    <label class="control-label" for="inputLastName">Objects</label>
+    <div class="controls">
+    <input type="text" class="input-xlarge" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Help text for Objects.</span>
+    <div class="search-buttons">
+
+  </div>
+    </div>
+    </div>
+
+      <div class="control-group">
+    <label class="control-label" for="inputLastName">Events</label>
+    <div class="controls">
+    <input type="text" class="input-xlarge" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Help text for Events.</span>
+    <div class="search-buttons">
+      <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">Exhibition x</button>
+  </div>
+    </div>
+    </div>
+
+     <div class="control-group">
+    <label class="control-label" for="inputLastName">Year</label>
+    <div class="controls">
+    <input type="text" class="input-small" placeholder=""> - <input type="text" class="input-small" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Help text for Year.</span>
+    <div class="search-buttons">
+      <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">1900 - 2000 x</button>
+  </div>
+    </div>
+    </div>
+
+          <div class="control-group">
+    <label class="control-label" for="inputLastName">Data Provider</label>
+    <div class="controls">
+    <input type="text" class="input-xlarge" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Help text for Data Provider.</span>
+    </div>
+    </div>
+
+ <div class="control-group">
+    <label class="control-label" for="inputLastName">Language</label>
+    <div class="controls">
+    <input type="text" class="input-xlarge" placeholder="">
+    <button type="submit" class="btn">Add</button>
+    <span class="help-inline"><i class="icon-info-sign"></i> Help text for Languages.</span>
+    <div class="search-buttons">
+      <button type="button" class="btn btn-mini btn-success disabled" disabled="disabled">English x</button>
+  </div>
+    </div>
+    </div>
+
+       <button type="submit" class="btn">Search</button>
     </div>
 
     </form>
@@ -114,8 +178,7 @@
     </div>
     <div class="span6">
 
-    
-    </div>
+
   </div> <!-- main content end -->     
 
     <footer> <!-- footer start -->
