--- a/trunk/virtual_lab/src/main/webapp/templates/search-results.html
+++ b/trunk/virtual_lab/src/main/webapp/templates/search-results.html
@@ -90,6 +90,7 @@
 
 <input id="submit" type="submit" value="Search">
             </form>
+            
           </div>
 
       <div class="row-fluid">
@@ -124,7 +125,7 @@
 <h5>By event</h5>
 <input type="text" placeholder="Add events">
 </div>
-<button class="btn" type="button">Filter</button>
+<br /><button class="btn" type="button">Filter</button>
 
 </div>
 
