--- a/virtual_lab/src/main/webapp/partials/search/familyname.html
+++ b/virtual_lab/src/main/webapp/partials/search/familyname.html
@@ -18,25 +18,45 @@
 </style>
 
 <div class="row-fluid">      
-     <div>
-	<form id="familyname-search-form" class="form-horizontal">
-		<div class="control-group">
-			<label class="control-label" for="familyNameSearchQuery">Family name: </label>
-			<div class="controls">
-				<input type="text" class="input-xlarge" id="familyNameSearchQuery" placeholder="Smith" ng-model="familyName"/>
-				<button type="submit" class="btn" ng-click="peopleByFamilyName(familyName)">Search</button>
-				<span class="help-inline"><i class="icon-info-sign"></i>Help...</span>
+	<div>
+		<form id="familyname-search-form" class="form-horizontal">
+			<div class="control-group">
+				<label class="control-label" for="familyNameSearchQuery">Family name:</label>
+				<div class="controls">
+					<input type="text" class="input-xlarge" id="familyNameSearchQuery" placeholder="Smith" ng-model="familyName"/>
+					<button type="submit" class="btn" ng-click="peopleByFamilyName()">Search</button>
+					<span class="help-inline"><i class="icon-info-sign"></i>Help...</span>
+				</div>
 			</div>
-		</div>
-		<div class="control-group">
+	<!-- 		
+	<div class="control-group">
 			<input type="number" ng-model="resultsPerPage" placeholder=5 style="border-radius: 0; width: 35px"/>
 		</div>
-	</form>
-</div>
+ -->	
+<!-- 			
+			<div class="row-fluid">
+				<div class="pagination pagination-centered">
+				  <ul>
+				    <li><a ng-click="pageDown(); return true;">Prev</a></li>
+				    <li><a href="#">1</a></li>
+				    <li><a href="#">2</a></li>
+				    <li><a href="#">3</a></li>
+				    <li><a href="#">4</a></li>
+				    <li><a href="#">5</a></li>
+				    <li><a ng-click="pageUp(); return false;">Next</a></li>
+				  </ul>
+				</div>
+			</div>
+  -->		
+  		</form>
+	</div>
 </div>
 
+
 <div class="row-fluid">
-	<table class="table table-striped">
+
+	<pagination on-select-page="turnPage(page)" num-pages="noOfPages" current-page="currentPage" previous-text="&laquo;" next-text="&raquo;" class="pagination-centered" ></pagination>
+ 	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th>Family name</th>
