--- a/trunk/virtual_lab/src/main/webapp/partials/search/familyname.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/search/familyname.html
@@ -17,6 +17,7 @@
  -->
 </style>
 
+<!-- Layout the search form. -->
 <div class="row-fluid">      
 	<div>
 		<form id="familyname-search-form" class="form-horizontal">
@@ -32,6 +33,7 @@
 	</div>
 </div>
 
+<!-- Layout the results table with pagination and an export button. -->
 <div class="row-fluid">
 	<pagination on-select-page="turnPage(page)" num-pages="noOfPages" current-page="currentPage" previous-text="&laquo;" next-text="&raquo;" class="pagination-centered" ></pagination>
 	<div>{{csvResponse}}</div>
