--- a/virtual_lab/src/main/webapp/partials/huniaggregate/objects/objectname.html
+++ b/virtual_lab/src/main/webapp/partials/huniaggregate/objects/objectname.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 <!--    
-.person-item
+.object-item
 {
 	font-size: 10px;
 	font-style: italic;
@@ -18,18 +18,18 @@
 </style>
 
 <div class="row-fluid">
-	<h3>People</h3>
+	<h3>Objects</h3>
 </div>
 
 <!-- Layout the search form. -->
 <div class="row-fluid">      
 	<div>
-		<form id="familyname-search-form" class="form-horizontal">
+		<form id="objectname-search-form" class="form-horizontal">
 			<div class="control-group">
-				<label class="control-label" for="familyNameSearchQuery">Family name:</label>
+				<label class="control-label" for="objectNameSearchQuery">Family name:</label>
 				<div class="controls">
-					<input type="text" class="input-xlarge" id="familyNameSearchQuery" placeholder="Smith" ng-model="familyName"/>
-					<button type="submit" class="btn" ng-click="peopleByFamilyName()">Search</button>
+					<input type="text" class="input-xlarge" id="objectNameSearchQuery" placeholder="Stumpjump plough" ng-model="objectName"/>
+					<button type="submit" class="btn" ng-click="objectsByObjectName()">Search</button>
 					<span class="help-inline"><i class="icon-info-sign"></i>Help...</span>
 				</div>
 			</div>
@@ -43,18 +43,18 @@
  	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th>Family name</th>
+				<th>Object name</th>
 				<th>Given name</th>
 				<th>Birth date</th>
 				<th>Occupation</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="person in response.results.bindings">
-				<th>{{person.lastName.value}}</th>
-				<td>{{person.firstName.value}}</td>
-				<td>{{person.birthDate.value}}</td>
-				<td>{{person.typeName.value}}</td>
+			<tr ng-repeat="object in response.results.bindings">
+				<th>{{object.lastName.value}}</th>
+				<td>{{object.firstName.value}}</td>
+				<td>{{object.birthDate.value}}</td>
+				<td>{{object.typeName.value}}</td>
 			</tr>
 		</tbody>
 	</table>
