RR: search for places

--- a/trunk/virtual_lab/src/main/webapp/partials/huniaggregate/places/placename.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/huniaggregate/places/placename.html
@@ -44,9 +44,8 @@
 		<thead>
 			<tr>
 				<th>Place name</th>
-				<th>XXXXX</th>
-				<th>YYYYY</th>
-				<th>ZZZZZ</th>
+				<th>Estabishment date</th>
+				<th>Type</th>
 			</tr>
 		</thead>
 		<tbody>
