RR: name in person search now hyperlinks to record on corbicula.

--- a/trunk/virtual_lab/src/main/webapp/partials/huniaggregate/people/familyname.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/huniaggregate/people/familyname.html
@@ -51,8 +51,8 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="person in response.results.bindings">
-				<th>{{person.lastName.value}}</th>
-				<td>{{person.firstName.value}}</td>
+				<th><a href="{{person.person.value}}" >{{person.lastName.value}}</a></th>
+				<td><a href="{{person.person.value}}" >{{person.firstName.value}}</a></td>
 				<td>{{person.birthDate.value}}</td>
 				<td>{{person.typeName.value}}</td>
 			</tr>
