--- a/virtual_lab/src/main/webapp/partials/huniaggregate/places/placename.html
+++ b/virtual_lab/src/main/webapp/partials/huniaggregate/places/placename.html
@@ -44,7 +44,7 @@
 		<thead>
 			<tr>
 				<th>Place name</th>
-				<th>Estabishment date</th>
+				<th>Establishment date</th>
 				<th>Type</th>
 			</tr>
 		</thead>
