RR: fix regression bug. Data not displaying in search results for person.

--- a/trunk/virtual_lab/src/main/webapp/partials/huniaggregate/people/familyname.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/huniaggregate/people/familyname.html
@@ -40,6 +40,7 @@
 <!-- Layout the results table with pagination and an export button. -->
 <div class="row-fluid">
 	<pagination on-select-page="turnPage(page)" num-pages="noOfPages" current-page="currentPage" previous-text="&laquo;" next-text="&raquo;" class="pagination-centered" ></pagination>
+	<!-- <div>{{jsonResponse}}</div> -->
  	<table class="table table-striped">
 		<thead>
 			<tr>
