--- a/trunk/virtual_lab/src/main/webapp/partials/members-partners.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/members-partners.html
@@ -36,4 +36,6 @@
 
 <span class="partner-logo"><a href="#"><img src="img/logo_nectar.gif" alt="Nectar" /></a></span> <span class="partner-logo"><a href="#"><img src="img/logo_deakin.gif" alt="Deakin" /></a></span>
 
+	<!-- Button to trigger feedback modal - feedback-modal.html -->
+	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
  </div> <!-- main content end -->     
