--- a/trunk/virtual_lab/src/main/webapp/partials/landing.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/landing.html
@@ -54,5 +54,7 @@
             </div>
             </div>
       </div>
+	<!-- Button to trigger feedback modal - feedback-modal.html -->
+	<a href="#feedbackModal" role="button" data-toggle="modal" class="btn btn-info">Feedback</a>
 
     </div> <!-- main content end -->     
